fix: board overflow hidden

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,7 @@
 #Board{
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 .row{
